--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>me.train</groupId>
+  <groupId>me.training</groupId>
   <artifactId>flink</artifactId>
   <version>1.0-SNAPSHOT</version>
   <build>
@@ -48,6 +48,7 @@
       <artifactId>lettuce-core</artifactId>
       <version>5.2.1.RELEASE</version>
     </dependency>
+
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
