--- a/pom.xml
+++ b/pom.xml
@@ -117,5 +117,11 @@
       <version>${flink.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-csv</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+
   </dependencies>
 </project>
